No recuerdo. Alguna prueba.

--- a/js/index.html
+++ b/js/index.html
@@ -14,7 +14,7 @@
   <script type="text/javascript" charset="utf-8">
     $(document).ready(function() {
       Censo2010.Cabeceras = new Censo2010.CabecerasCollection;
-      Censo2010.Cabeceras.fetch({success: function() {alert('success!');} })
+      Censo2010.Cabeceras.fetch();
       
       console.log(Censo2010.Cabeceras.length);
       
